# image-stitch

code/: CMakeLists.txt  brief_gao.cpp  brief_self.cpp  bright_consistency.cpp  brute_force_match.cpp  harris_opencv.cpp  harris_self.cpp  image_stitch.cpp  image_wrap.cpp  main.cpp  orb_opencv.cpp  ransac_homo.cpp  rm_crack.cpp
